--- a/css/pictureCheckbox.css
+++ b/css/pictureCheckbox.css
@@ -30,6 +30,10 @@ input[type=checkbox]:checked + label {
     display: none;
 }
 
+.modal-body img {
+    width: 50px;
+    height: 50px;
+}
 
 
 /*.inputs input[type=radio] + label{
